Backported automatic right trim on strings (disabled by default)