@@ -80,11 +80,12 @@ import java.util.*;
  */
 public class DBFReader extends DBFBase {
 
-	private DataInputStream dataInputStream;
-	private DBFHeader header;
-
 	private static final long MILLISECS_PER_DAY = 24*60*60*1000;
 	private static final long MILLIS_SINCE_4713 = -210866803200000L;
+	
+	private DataInputStream dataInputStream;
+	private DBFHeader header;
+	private boolean trimRightSpaces = false;
 
 	/**
 	 * Initializes a DBFReader object.
@@ -205,7 +206,12 @@ public class DBFReader extends DBFBase {
 				case CHARACTER:
 					byte b_array[] = new byte[this.header.fieldArray[i].getFieldLength()];
 					this.dataInputStream.read(b_array);
-					recordObjects[i] = new String(b_array, getCharset());
+					if (this.trimRightSpaces) {
+						recordObjects[i] = new String(DBFUtils.trimRightSpaces(b_array), getCharset());
+					}
+					else {
+						recordObjects[i] = new String(b_array, getCharset());
+					}
 					break;
 
 				case DATE:
@@ -241,7 +247,13 @@ public class DBFReader extends DBFBase {
 						this.dataInputStream.read(t_float);
 						t_float = DBFUtils.removeSpaces(t_float);
 						if (t_float.length > 0 && !DBFUtils.contains(t_float, (byte) '?') && !DBFUtils.contains(t_float, (byte) '*')) {
-							recordObjects[i] = new Double(new String(t_float, StandardCharsets.US_ASCII).replace(',', '.'));
+							String aux = new String(t_float, StandardCharsets.US_ASCII).replace(',', '.');
+							if (".".equals(aux)) {
+								recordObjects[i] = Double.valueOf("0.0");
+							}
+							else {
+								recordObjects[i] = Double.valueOf(aux);
+							}
 						} else {
 							recordObjects[i] = null;
 						}
@@ -318,6 +330,14 @@ public class DBFReader extends DBFBase {
 	
 	protected DBFHeader getHeader() {
 		return this.header;
+	}
+	
+	public boolean isTrimRightSpaces() {
+		return this.trimRightSpaces;
+	}
+	
+	public void setTrimRightSpaces(boolean trimRightSpaces) {
+		this.trimRightSpaces = trimRightSpaces;
 	}
 	
 }
